--- a/My_personal_site/V2/src/app/styles/scss/Nav.scss
+++ b/My_personal_site/V2/src/app/styles/scss/Nav.scss
@@ -18,6 +18,7 @@
 	border-left-style: solid;
 	border-width: thin;
 	border-color: $pri-col;
+	overflow: scroll;
 }
 
 #nav-text {
@@ -28,6 +29,7 @@
 	list-style: none;
 	padding-left: 1em;
 	margin-top: 2em;
+	padding-bottom: 2em;
 }
 
 #hidden-nav li {
